2008-07-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/gcc-4.2/config-internal-compiler.h,
 config/sample-headers/compiler/gcc-4.2/config-public-compiler.h,
 config/sample-headers/compiler/VisualC++.NET-2003/config-public-compiler.h:
  - Enable "long long" support.
 config/sample-headers/libpq/8.3/config-internal/libpq.h:
  - Added sample headers for more recent gcc and libpq.
 include/pqxx/compiler-public.h, win32/vc-libpqxx.mak.template:
  - New PQXX_AUTOLINK for Visual C++, thanks Kirit Saelensminde
2008-07-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Removed -Wno-long-double; current gcc doesn't know it--thanks Roger Leigh
 include/pqxx/compiler-internal.hxx:
  - Sun Studio fix: use ptrdiff_t, not iterator_traits, thanks Jorgen Austvik
  - distance() workaround for Sun Studio was completely broken
 src/util.cxx:
  - Hopefully fixed gcc 4.3 warning, thanks Roger Leigh
2008-07-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 test/unit/test_escape.cxx:
  - New quote() function templates, using string_traits
  - New test
 include/pqxx/except.hxx, include/pqxx/util.hxx, src/util.cxx:
  - New exception type conversion_error
  - Added name() and has_null() to string_traits<>
  - Better error messages for null conversions
 test/unit/test_sql_cursor.cxx:
  - Simpler way of running multiple tests from one main()
2008-06-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx, include/pqxx/result.hxx, src/connection_base.cxx,
 src/cursor.cxx, src/except.cxx, src/largeobject.cxx, src/result.cxx,
 src/robusttransaction.cxx, src/tablereader.cxx, src/transaction_base.cxx,
 src/util.cxx:
  - Throw pqxx_exception-derived exceptions instead of std ones, thanks yrs90.
2008-06-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/tablewriter.hxx:
  - Peephole optimization, thanks Daniel Frey.
2008-06-22  Jeroen T. Vermeulen <jtv@xs4all.nl>