@@ -415,124 +415,6 @@ typedef long result_difference_type;
 
 namespace internal
 {
-/// Internal string-escaping function; does not deal well with encoding issues
-/** @deprecated Use transaction's esc() function instead
- */
-PGSTD::string escape_string(const char str[], size_t maxlen) PQXX_DEPRECATED;
-} // namespace internal
-
-
-
-/**
- * @addtogroup escaping String escaping
- *
- * Use these functions to "groom" user-provided strings before using them in
- * your SQL statements.  This reduces the chance of unexpected failures when
- * users type unexpected characters, but more importantly, it helps prevent
- * so-called SQL injection attacks.
- *
- * To understand what SQL injection vulnerabilities are and why they should be
- * prevented, imagine you use the following SQL statement somewhere in your
- * program:
- *
- * @code
- *	TX.exec("SELECT number,amount "
- *		"FROM accounts "
- *		"WHERE allowed_to_see('" + userid + "','" + password + "')");
- * @endcode
- *
- * This shows a logged-in user important information on all accounts he is
- * authorized to view.  The userid and password strings are variables entered by
- * the user himself.
- *
- * Now, if the user is actually an attacker who knows (or can guess) the general
- * shape of this SQL statement, imagine he enters the following password:
- *
- * @code
- *	x') OR ('x' = 'x
- * @endcode
- *
- * Does that make sense to you?  Probably not.  But if this is inserted into the
- * SQL string by the C++ code above, the query becomes:
- *
- * @code
- *	SELECT number,amount
- *	FROM accounts
- *	WHERE allowed_to_see('user','x') OR ('x' = 'x')
- * @endcode
- *
- * Is this what you wanted to happen?  Probably not!  The neat allowed_to_see()
- * clause is completely circumvented by the "<tt>OR ('x' = 'x')</tt>" clause,
- * which is always @c true.  Therefore, the attacker will get to see all
- * accounts in the database!
- *
- * To prevent this from happening, use the transaction's esc() function:
- *
- * @code
- *	TX.exec("SELECT number,amount "
- *		"FROM accounts "
- *		"WHERE allowed_to_see('" + TX.esc(userid) + "', "
- *			"'" + TX.esc(password) + "')");
- * @endcode
- *
- * Now, the quotes embedded in the attacker's string will be neatly escaped so
- * they can't "break out" of the quoted SQL string they were meant to go into:
- *
- * @code
- *	SELECT number,amount
- *	FROM accounts
- *	WHERE allowed_to_see('user', 'x'') OR (''x'' = ''x')
- * @endcode
- *
- * If you look carefully, you'll see that thanks to the added escape characters
- * (a single-quote is escaped in SQL by doubling it) all we get is a very
- * strange-looking password string--but not a change in the SQL statement.
- */
-//@{
-/// Escape nul-terminated string for inclusion in SQL strings
-/** Use this to sanitize strings that may contain characters like backslashes
- * or quotes.  You'll want to do this for all data received from outside your
- * application that gets used in SQL--otherwise an attacker might crack your
- * code by feeding it some string containing e.g. a closing quote followed by
- * SQL commands you did not intend to execute.
- *
- * This function does not add SQL-style single quotes around the result string,
- * nor does it recognize or generate nulls.
- *
- * @deprecated Use the transaction's esc() function instead
- */
-PGSTD::string PQXX_LIBEXPORT sqlesc(const char str[]) PQXX_DEPRECATED;
-
-/// Escape string for inclusion in SQL strings
-/** Reads and escapes input string.  The string is terminated by either a nul
- * character or the given byte length, whichever comes first.
- *
- * @param str optionally zero-terminated character string
- * @param maxlen largest possible length of input string, not including optional
- * terminating nul character.
- *
- * This function does not add SQL-style single quotes around the result string,
- * nor does it recognize or generate nulls.
- *
- * @deprecated Use the transaction's esc() function instead
- */
-PGSTD::string PQXX_LIBEXPORT sqlesc(const char str[], size_t maxlen)
-	PQXX_DEPRECATED;
-
-/// Escape string for inclusion in SQL strings
-/** This works like the other sqlesc() variants, which means that if the string
- * contains a nul character, conversion will stop there.  PostgreSQL does not
- * allow nul characters in strings.
- *
- * @deprecated Use the transaction's esc() function instead
- */
-PGSTD::string PQXX_LIBEXPORT sqlesc(const PGSTD::string &) PQXX_DEPRECATED;
-
-//@}
-
-
-namespace internal
-{
 void PQXX_LIBEXPORT freepqmem(void *);
 
 
